--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/style.css">
+</head>
+<body>
+    {% include header.html %}
+    {{ content }}
+    {% include footer.html %}
+</body>
+</html>
