--- a/style.css
+++ b/style.css
@@ -94,13 +94,13 @@ body {
 .banner h2 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
-    opacity: 0.9;
+    opacity: 1;
     color:red;
 }
 
 .banner p {
     font-size: 1.2rem;
-    opacity: 0.9;
+    opacity: 1;
 }
 
 /* Sections communes */
@@ -133,7 +133,7 @@ h2 {
 }
 
 .service-item {
-    background: white;
+    background: green;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
