--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
     font-size: 2.5rem;
     margin-bottom: 1rem;
     opacity: 1;
-    color:red;
+    color:white;
 }
 
 .banner p {
@@ -133,7 +133,7 @@ h2 {
 }
 
 .service-item {
-    background: green;
+    background: white;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
