--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="{{ '/style2.css' | relative_url }}">
 </head>
 <body>
     {% include header.html %}
