--- a/style2.css
+++ b/style2.css
@@ -33,7 +33,7 @@ body {
 }
 
 article {
-    background: white;
+    background: grey;
     border-radius: 12px;
     padding: 2rem;
     margin-bottom: 1.5rem;
